<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.ororo.auto.jigokumimi.ui.setting.SettingViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.setting.SettingFragment">

        <ProgressBar
            android:id="@+id/progressBar"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="0dp"
            android:layout_height="@dimen/indicator_height"
            android:indeterminate="true"
            android:invisibility="@{viewModel.isLoading}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/currentPasswordSuggest"
            style="@style/InputSuggestTextView"
            android:layout_marginStart="@dimen/spacing_m"
            android:text="@string/current_password_edit_suggest"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/progressBar" />


        <EditText
            android:id="@+id/currentPasswordEdit"
            style="@style/CommonEditText"
            android:layout_marginStart="@dimen/spacing_m"
            android:layout_marginEnd="@dimen/spacing_m"
            android:enabled="@{!viewModel.isLoading}"
            android:hint="@string/current_password_hint"
            android:inputType="textPassword"
            android:text="@={viewModel.currentPassword}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/currentPasswordSuggest" />

        <TextView
            android:id="@+id/newPasswordSuggest"
            style="@style/InputSuggestTextView"
            android:layout_marginStart="@dimen/spacing_m"
            android:layout_marginTop="@dimen/spacing_l"
            android:text="@string/new_password_edit_suggest"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/currentPasswordEdit" />

        <EditText
            android:id="@+id/newPasswordEdit"
            style="@style/CommonEditText"
            android:layout_marginStart="@dimen/spacing_m"
            android:layout_marginEnd="@dimen/spacing_m"
            android:enabled="@{!viewModel.isLoading}"
            android:hint="@string/new_password_hint"
            android:inputType="textPassword"
            android:text="@={viewModel.newPassword}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/newPasswordSuggest" />

        <TextView
            android:id="@+id/newPasswordConfirmationSuggest"
            style="@style/InputSuggestTextView"
            android:layout_marginStart="@dimen/spacing_m"
            android:layout_marginTop="@dimen/spacing_l"
            android:text="@string/password_confirmation_edit_suggest"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/newPasswordEdit" />

        <EditText
            android:id="@+id/newPasswordConfirmationEdit"
            style="@style/CommonEditText"
            android:layout_marginStart="@dimen/spacing_m"
            android:layout_marginEnd="@dimen/spacing_m"
            android:hint="@string/new_password_retype_hint"
            android:enabled="@{!viewModel.isLoading}"
            android:inputType="textPassword"
            android:text="@={viewModel.newPasswordConfirmation}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/newPasswordConfirmationSuggest" />

        <Button
            android:id="@+id/changePasswordButton"
            style="@style/CommonButton"
            android:layout_marginStart="@dimen/spacing_m"
            android:layout_marginEnd="@dimen/spacing_m"
            android:layout_marginBottom="@dimen/spacing_s"
            android:enabled="@{viewModel.changePasswordButtonEnabledState}"
            android:text="@string/change_password_button"
            app:layout_constraintBottom_toTopOf="@+id/unregisterButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/unregisterButton"
            style="@style/OutlinedButton"
            android:layout_marginStart="@dimen/spacing_m"
            android:layout_marginEnd="@dimen/spacing_m"
            android:layout_marginBottom="@dimen/spacing_s"
            android:enabled="@{!viewModel.isLoading}"
            android:text="@string/unregister_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>