...
            android:id="@+id/passwordConfirmSuggest"
            style="@style/InputSuggestTextView"
            android:layout_marginStart="@dimen/spacing_m"
            android:layout_marginTop="@dimen/spacing_l"
            android:text="@string/password_confirmation_edit_suggest"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passwordEdit" />

        <TextView
            android:id="@+id/emailSuggest"
            style="@style/InputSuggestTextView"
            android:layout_marginStart="@dimen/spacing_m"
            android:text="@string/email_edit_suggest"
...
            android:id="@+id/passwordSuggest"
            style="@style/InputSuggestTextView"
            android:layout_marginStart="@dimen/spacing_m"
            android:layout_marginTop="@dimen/spacing_l"
            android:text="@string/password_edit_suggest"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emailEdit" />

        <EditText
            android:id="@+id/emailEdit"
            style="@style/CommonEditText"
            android:layout_marginStart="@dimen/spacing_m"
            android:layout_marginEnd="@dimen/spacing_m"
...
