...
            style="@style/CommonButton"
            android:layout_marginStart="@dimen/spacing_m"
            android:layout_marginEnd="@dimen/spacing_m"
            android:layout_marginBottom="@dimen/spacing_s"
            android:enabled="@{!viewModel.isLoading}"
            android:text="@string/auth_button"
            app:layout_constraintBottom_toTopOf="@id/demoButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/demoButton"
            style="@style/OutlinedButton"
...
